--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     }
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/node": "^10.5.1",
     "husky": "^1.0.0-rc.9",
     "jest": "^23.2.0",
@@ -57,5 +58,9 @@
     "prettier": "^1.13.7",
     "standard": "^11.0.1",
     "typescript": "^2.9.2"
+  },
+  "dependencies": {
+    "discord.js": "^11.3.2",
+    "dotenv": "^6.0.0"
   }
 }
